--- a/cvf.html
+++ b/cvf.html
@@ -102,19 +102,19 @@
     <div class="card">
       <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Candidate 1">
       <h3>John Smith</h3>
-      <p>Position: President</p>
+      <p>Position: Manager</p>
       <button class="support-btn" onclick="openSignin('John Smith')">Support</button>
     </div>
     <div class="card">
       <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="Candidate 2">
       <h3>Emily Johnson</h3>
-      <p>Position: President</p>
+      <p>Position: Chairman </p>
       <button class="support-btn" onclick="openSignin('Emily Johnson')">Support</button>
     </div>
     <div class="card">
       <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="Candidate 3">
       <h3>Michael Brown</h3>
-      <p>Position: President</p>
+      <p>Position: Director </p>
       <button class="support-btn" onclick="openSignin('Michael Brown')">Support</button>
     </div>
   </div>
