--- a/cvi.html
+++ b/cvi.html
@@ -108,13 +108,13 @@
     <div class="card">
       <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="Candidate 2">
       <h3>Emily Johnson</h3>
-      <p>Position: President</p>
+      <p>Position: Chairperson </p>
       <button class="support-btn" onclick="openSignin('Emily Johnson')">Support</button>
     </div>
     <div class="card">
       <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="Candidate 3">
       <h3>Michael Brown</h3>
-      <p>Position: President</p>
+      <p>Position: Director </p>
       <button class="support-btn" onclick="openSignin('Michael Brown')">Support</button>
     </div>
   </div>
