--- a/csp.html
+++ b/csp.html
@@ -102,13 +102,13 @@
     <div class="card">
       <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Candidate 1">
       <h3>John Smith</h3>
-      <p>Position: President</p>
+      <p>Position: Director </p>
       <button class="support-btn" onclick="openSignin('John Smith')">Support</button>
     </div>
     <div class="card">
       <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="Candidate 2">
       <h3>Emily Johnson</h3>
-      <p>Position: President</p>
+      <p>Position: Manager</p>
       <button class="support-btn" onclick="openSignin('Emily Johnson')">Support</button>
     </div>
     <div class="card">
