--- a/inn.html
+++ b/inn.html
@@ -119,7 +119,7 @@
   }
 </script>
       <p>Open the bot to receive all your client login.</p>
-<button id="openBotBtnHome" class="btn">Click here to see all your client login</button>
+<button id="openBotBtnHome" class="btn">Click here to copy working format for all these links, to make your husle more easier</button>
       <ul id="freeLinksList" class="link-list"></ul>
     </section>
     <!-- Premium Section -->
@@ -444,7 +444,7 @@ function renderFreeLinks() {
   document.getElementById("openBotBtnHome").addEventListener("click", () => {
     showMyAd()
       .then(() => {
-        window.open("https://t.me/intelligentverificationlinkbot?start=start", "_blank");
+        window.open("http://t.me/intelligentverificationlinkbot/formatlink");
       })
       .catch(() => {
         // Even if ad fails → still open bot
