--- a/inn.html
+++ b/inn.html
@@ -119,7 +119,7 @@
   }
 </script>
       <p>Open the bot to receive all your client login.</p>
-<button id="openBotBtnHome" class="btn">Click here to copy working format for all these links, to make your husle more easier</button>
+<button id="openBotBtnHome" class="btn">Click here to copy working format for all these links, to make your husle more easier.</button>
       <ul id="freeLinksList" class="link-list"></ul>
     </section>
     <!-- Premium Section -->
