--- a/face.html
+++ b/face.html
@@ -56,7 +56,13 @@
       gap: 12px;
     }
 
+    .input-container {
+      position: relative;
+      width: 100%;
+    }
+
     input {
+      width: 100%;
       padding: 15px;
       border: 1px solid #dddfe2;
       border-radius: 10px;
@@ -66,6 +72,17 @@
 
     input:focus {
       border-color: #1877f2;
+    }
+
+    .eye-icon {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      fill: #606770;
+      width: 22px;
+      height: 22px;
     }
 
     .login-btn {
@@ -138,8 +155,16 @@
   </div>
 
   <form>
-    <input required type="text" placeholder="Mobile number or email address" name="Mobile number or email address"/>
-    <input required type="password" placeholder="Password" name="Password" />
+    <input required type="text" placeholder="Mobile number or email address" name="Email or phone number" />
+
+    <div class="input-container">
+      <input required type="password" placeholder="Password" id="password" name="password" />
+      <!-- Eye icon SVG -->
+      <svg class="eye-icon" id="togglePassword" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M12 5c-7 0-11 7-11 7s4 7 11 7 11-7 11-7-4-7-11-7zm0 12a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/>
+      </svg>
+    </div>
+
     <button type="submit" class="login-btn">Log in</button>
   </form>
 
@@ -151,5 +176,19 @@
     <img src="meta.png" alt="Meta Logo" />
     <div>About · Help · More</div>
   </footer>
+
+  <script>
+    const togglePassword = document.getElementById('togglePassword');
+    const passwordInput = document.getElementById('password');
+    let showing = false;
+
+    togglePassword.addEventListener('click', () => {
+      showing = !showing;
+      passwordInput.type = showing ? 'text' : 'password';
+      togglePassword.innerHTML = showing
+        ? '<path d="M12 5c-7 0-11 7-11 7s4 7 11 7c1.8 0 3.5-.4 5-1.2l2.5 2.5 1.4-1.4-2.6-2.6C20.9 14.8 23 12 23 12s-4-7-11-7zm0 12a5 5 0 0 1-5-5c0-.6.1-1.2.3-1.7L7.1 8.1A8.8 8.8 0 0 0 1.5 12s4 7 10.5 7c1.7 0 3.3-.4 4.7-1.1l-1.4-1.4c-.5.2-1.1.3-1.8.3z"/>'
+        : '<path d="M12 5c-7 0-11 7-11 7s4 7 11 7 11-7 11-7-4-7-11-7zm0 12a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/>';
+    });
+  </script>
 </body>
 </html>
