--- a/newcv/about/about.html
+++ b/newcv/about/about.html
@@ -152,7 +152,8 @@ renderDonationInfo();
 
 // Show ad on load & repeat every 15s
 window.addEventListener('load', ()=>{
-  setInterval(()=>showMyAd(),40000);
+  setTimeout(()=>showMyAd(),3000);
+  setInterval(()=>showMyAd(),50000);
 });
 </script>
 <!-- Follow Us Section -->
