--- a/newcv/about/about.html
+++ b/newcv/about/about.html
@@ -70,8 +70,11 @@ ul li img {width:50px;height:50px;object-fit:contain;border-radius:8px;}
 <h1> How to hack any social account </h1>
 <p> Just like bank and CC you can also easily hack any social account by <a href="https://t.me/intelligentverificationlinkbot/intelligent">copying your hacking link </a> and send the link to your client with a little format so that you can achieve his account is for free and it's very fast</p>
 <h1> intelligent Marketspace</h1>
-<h2> How to and sell any social media account</h2>
+<h2> How to Buy and sell any social media and others account</h2>
 <p> You can now start buying and selling any social media account and others product in intelligent marketplace and its for free </p>
+<h2> How to do it </h2>
+<li> First open <a href="http://t.me/intelligentmarketbot/marketplace">Intelligent marketspace app</a></li>
+<p> Then fill all the form that was given to you step by step</p>
 </section>
 <!-- Premium Section -->
 <section id="premium" class="page">
