--- a/newcv/Cl/fl.html
+++ b/newcv/Cl/fl.html
@@ -15,7 +15,6 @@ body, html {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #fefefe;
 }
 
 .flyer {
@@ -61,7 +60,7 @@ body, html {
   top: 0px;
   left: 0;
   width: 100%;
-  height: 500px; /* adjust height as needed */
+  height: 2000px; /* adjust height as needed */
   background: url('https://i.ibb.co/SDMHwFwP/Background-Eraser-20251119-000853990.png') center bottom / cover no-repeat;
   z-index: 0;
 }
@@ -112,8 +111,8 @@ h2 {
 p {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 30px;
-  color: #8b5e3c;
+  font-size: 40px;
+  color: #b2a9a3;
   margin-bottom: 20px;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.15);
 }
@@ -235,7 +234,7 @@ p {
 
 /* Footer */
 .footer {
-  background: black;
+  background: white;
   padding: 20px;
   border-radius: 15px;
   display: flex;
@@ -247,10 +246,10 @@ p {
 }
 
 .footer div {
-  color: white;
+  color: black;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 30px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
   margin: 8px;
   display: flex;
@@ -294,8 +293,7 @@ h2 {
       <div class="box"><img src="https://i.ibb.co/BKVYqmtD/838774937c6c95a2444a804f054397eb.jpg" alt="Clothes"></div>
       <div class="box"><img src="https://i.ibb.co/M5JLG9Sj/4688adee478b50a905eb204b82df041a.jpg" alt="Wigs"></div>
       <div class="box"><img src="https://i.ibb.co/s9csQVBb/da950825604647cca84602e498249844.jpg" alt="Bags"></div>
-      <div class="box"><img src="https://i.ibb.co/3yqbBpPF/c9c4e29149042c6eff2fd90ba98a60ab.jpg" alt="Accessories"></div>
-    </div>
+    
 
     <!-- 20 Days Sale Box -->
     <div class="sale-calendar">
