--- a/newcv/Cl/fl.html
+++ b/newcv/Cl/fl.html
@@ -285,30 +285,29 @@ h2 {
   <div class="flyer-content">
     <header>Classic <br> White Empire</header>
     <h2>Christmas & <br> New Year Sale!</h2>
-    <p>25th December – Wigs, Clothes & Bags</p>
+    <p>Christmas – Wigs, Clothes & Bags</p>
     <div class="sale-banner">Huge Discounts Await!</div>
 
     <!-- New Boxes Section -->
     <div class="banner-images">
-      <div class="box"><img src="https://i.ibb.co/BKVYqmtD/838774937c6c95a2444a804f054397eb.jpg" alt="Clothes"></div>
+      <div class="box"><img src="https://i.ibb.co/3yqbBpPF/c9c4e29149042c6eff2fd90ba98a60ab.jpg" alt="Clothes"></div>
       <div class="box"><img src="https://i.ibb.co/M5JLG9Sj/4688adee478b50a905eb204b82df041a.jpg" alt="Wigs"></div>
-      <div class="box"><img src="https://i.ibb.co/s9csQVBb/da950825604647cca84602e498249844.jpg" alt="Bags"></div>
+      <div class="box"><img src="https://i.ibb.co/Jj6NdHwT/c06137e9963134a88f2e02191ceb2cb2.jpg" alt="Bags"></div>
+            <div class="box"><img src="https://i.ibb.co/YFKgwcKD/4564360640a3cb650612bcaef650b0ce.jpg" alt="Bags"></div>
+                  <div class="box"><img src="https://i.ibb.co/4n3Zx9gw/dc93f6c22ff8825a0db38acada051d8c.jpg" alt="Bags"></div>
+                        <div class="box"><img src="https://i.ibb.co/s9csQVBb/da950825604647cca84602e498249844.jpg" alt="Bags"></div>
+                              <div class="box"><img src="https://i.ibb.co/BKVYqmtD/838774937c6c95a2444a804f054397eb.jpg" alt="Bags"></div>
+                                    <div class="box"><img src="https://i.ibb.co/spFHrrBf/1ac4afd2889724e5905e5c673e62437d.jpg" alt="Bags"></div>
     
 
     <!-- 20 Days Sale Box -->
     <div class="sale-calendar">
-      <h3>🎉 20 Days of Sales!</h3>
+      <h3>🎉 10 Days of Sales!</h3>
           <!-- Sale Dates Text -->
     <div class="sale-dates">
-      Starting from <strong>December 5</strong> to <strong>25th</strong>
+      Starting from <strong>21th November</strong> to <strong>1th of December</strong>
     </div>
       <p>Each day brings a new amazing deal on wigs, clothes, bags, and accessories. Mark your calendar and don’t miss out!</p>
-    </div>
-    <!-- Products -->
-    <div class="products">
-      <div class="wig"></div>
-      <div class="clothes"></div>
-      <div class="bag"></div>
     </div>
 
     <!-- Footer -->
