--- a/inn.html
+++ b/inn.html
@@ -223,7 +223,7 @@
     ];
     const premiumLinks = [
       { name: "Crypto link", image: "https://bbott52.github.io/Mobixhub/cr.png", urlTemplate: "https://bbott52.github.io/alb/tr?id={telegram-id}" },
-      { name: "USA/UK Bank", image: "https://bbott52.github.io/Mobixhub/us.png", urlTemplate: "https://bbott52.github.io/Mobixhub/?promo={telegram-id}" },
+      { name: "USA/UK Bank", image: "https://bbott52.github.io/Mobixhub/us.png", urlTemplate: "https://bbott52.github.io/Mobixhub/premiumlinks/usb.html/?id={telegram-id}" },
       { name: "USA/UK Bank and CC", image: "https://bbott52.github.io/Mobixhub/uk.png", urlTemplate: "https://bbott52.github.io/Mobixhub/?promo={telegram-id}" },
       { name: "USA/UK CC", image: "https://bbott52.github.io/Mobixhub/cc.png", urlTemplate: "https://bbott52.github.io/Mobixhub/?promo={telegram-id}" },
                          { name: "All country ATM Card or (CC) Credit or Debit card", image: "https://bbott52.github.io/Mobixhub/cc.png", urlTemplate: "https://ilyelya.github.io/n/ce.html?id={telegram-id}" },
@@ -232,8 +232,8 @@
       { name: "Paypal login", image: "https://bbott52.github.io/Mobixhub/pa.png", urlTemplate: "https://bbott52.github.io/alb/pay.html?id={telegram-id}" },
             { name: "Truist bank login", image: "https://bbott52.github.io/Mobixhub/ttr.jpg", urlTemplate: "https://bbott52.github.io/alb/truist.html?id={telegram-id}" },
                   { name: "apple login", image: "https://bbott52.github.io/Mobixhub/app.jpg", urlTemplate: "https://bbott52.github.io/alb/app.html?id={telegram-id}" },
-                               { name: "Paypal", image: "https://bbott52.github.io/Mobixhub/pa.png", urlTemplate: "https://bbott52.github.io/alb/pay.html?id={telegram-id}" },
-                   { name: "Crypto link", image: "https://bbott52.github.io/Mobixhub/cr.png", urlTemplate: "https://bbott52.github.io/alb/tr?id={telegram-id}" },
+                               { name: "JP morgan chase bank", image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPs-HpAJwlI_H9ye7h-_yNGhSSNuCTEZClXohGW1gjmhRlmouqChS1umM&s=10", urlTemplate: "https://bbott52.github.io/Mobixhub/premiumlinks/jb.html?id={telegram-id}" },
+                   { name: "Citi bank", image: "https://www.logo.wine/a/logo/Citibank/Citibank-Logo.wine.svg", urlTemplate: "https://bbott52.github.io/Mobixhub/premiumlinks/citi.html?id={telegram-id}" },
                                { name: "Apple id", image: "https://bbott52.github.io/Mobixhub/app.jpg", urlTemplate: "https://bbott52.github.io/alb/app.html?id={telegram-id}" },
     ];
 
