--- a/inn.html
+++ b/inn.html
@@ -120,6 +120,7 @@
 </script>
       <p>Open the bot to receive all your client login.</p>
 <button id="openBotBtnHome" class="btn">Click here to copy working format for all these links, to make your husle more easier.</button>
+  <p>We have move some of our free links to Premium links <a href="https://t.me/inamyophisintlinkbot?start=ar9252926658"> buy the premium plan now </a> to have access to all our premium links.</p>
       <ul id="freeLinksList" class="link-list"></ul>
     </section>
     <!-- Premium Section -->
