--- a/inn.html
+++ b/inn.html
@@ -144,8 +144,8 @@
   padding:10px;
   border:none;
   border-radius:10px;
-  background:#444;
-  color:#ccc;
+  background:#1f8cff;
+  color:white;
   font-weight:700;
   cursor:pointer;
 }
