--- a/inn.html
+++ b/inn.html
@@ -421,7 +421,7 @@ function renderFreeLinks() {
         </div>
     
         <h3 style="margin:14px 0 8px;font-size:18px;font-weight:700;display:flex;align-items:center;gap:6px;">
-          <span>🔒</span> Bank, Credit/Debit card Crypto and many more link
+          <span>🔒</span> Bank, Credit/Debit card Crypto, Betting website, Spotify and many more link
         </h3>
         <p style="margin:0 0 12px;color:#97a0c3;font-size:14px;">
           Go premium before you can copy or paste this link.
@@ -540,7 +540,7 @@ function renderFreeLinks() {
     </p>
 
     <button class="premium-buy-btn" onclick="goPremium()">💳 Buy Premium</button>
-    <button class="premium-ok-btn" onclick="goToPremium()">✅ Ok, Got It</button>
+    <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links</button>
     <button class="premium-later-btn" onclick="closePremiumModal()">⏳ Buy Later</button>
   </div>
 </div>
