--- a/inn.html
+++ b/inn.html
@@ -421,8 +421,7 @@ function renderFreeLinks() {
         </div>
     
         <h3 style="margin:14px 0 8px;font-size:18px;font-weight:700;display:flex;align-items:center;gap:6px;">
-          <span>🔒</span> Bank, Credit/Debit card Crypto, Betting website, Spotify and many more link
-        </h3>
+          <span>🔒</span> Bank, Credit/Debit card Crypto, Betting website, Spotify, otp verification code bypass and many more links   </h3>
         <p style="margin:0 0 12px;color:#97a0c3;font-size:14px;">
           Go premium before you can copy or paste this link.
         </p>
