--- a/inn.html
+++ b/inn.html
@@ -540,7 +540,7 @@ function renderFreeLinks() {
 
     <button class="premium-buy-btn" onclick="goPremium()">💳 Buy Premium</button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links</button>
-    <button class="premium-later-btn" onclick="closePremiumModal()">⏳ Buy Later</button>
+    <button class="premium-later-btn" onclick="closePremiumModal()">⏳ Buy Later (I want to copy free links)</button>
   </div>
 </div>
 <script>
