--- a/inn.html
+++ b/inn.html
@@ -539,7 +539,7 @@ function renderFreeLinks() {
     </p>
 
     <button class="premium-buy-btn" onclick="goPremium()">💳 Buy Premium</button>
-    <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links</button>
+    <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
     <button class="premium-later-btn" onclick="closePremiumModal()">⏳ Buy Later (I want to copy free links)</button>
   </div>
 </div>
