--- a/inn.html
+++ b/inn.html
@@ -144,8 +144,8 @@
   padding:10px;
   border:none;
   border-radius:10px;
-  background:#1f8cff;
-  color:white;
+  background:#e2f0e3;
+  color:black;
   font-weight:700;
   cursor:pointer;
 }
@@ -533,6 +533,7 @@ function renderFreeLinks() {
 <div id="premiumModal" class="premium-modal">
   <div class="premium-box">
     <h3>🔒 Premium Update</h3>
+    <p>Our Premium have more hacking tools </p>
     <p>
       We have moved some of our free links to <b>Premium</b> links.  
       Upgrade now to unlock all premium tools.
